# aiforgis

./: .gitignore  .lefthook.yml  README.md  pyproject.toml
notebooks/: pso.ipynb  transfer_learning.ipynb
