[project]
name = "swarm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
]

[dependency-groups]
dev = [
    "notebooktester>=0.2.1",
    "ruff>=0.11.9",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "N", "C4", "DTZ", "PT", "S"]
